facebook reaction button

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,27 @@
 .card{
   background-color: rgba(0, 0, 0, 0.541);
 }
+
+
+
+
+.likebtn{
+  color: blue;
+}
+
+.wowbtn{
+  color: orange;
+}
+
+.angrybtn{
+  color: orangered;
+}
+
+.reaction{
+  background-color: rgb(201, 152, 152);
+  width: 90px;
+  padding: 10px 0px;
+  margin: 5px;
+  text-align: center;
+  
+}
